# dlhdhr

./: Dockerfile  LICENSE.txt  README.md  pyproject.toml
src/dlhdhr/: __about__.py  __init__.py  __main__.py  app.py  config.py  dlhd.py  ffmpeg.py  tuner.py  tvg_id.py  xmltv.py  zap2it.py
src/dlhdhr/dlhd/: __init__.py  channels.py
src/dlhdhr/epg/: __init__.py  epgsky.py  program.py  zap2it.py  zaptv.py
